2010-09-09  Kent Tamura  <tkent@chromium.org>

Reviewed by Dimitri Glazkov.

        <input type=number> should not have an invalid number as its value
        https://bugs.webkit.org/show_bug.cgi?id=43973

        * fast/forms/ValidityState-rangeOverflow-expected.txt:
        * fast/forms/ValidityState-rangeUnderflow-expected.txt:
        * fast/forms/ValidityState-typeMismatch-number-expected.txt:
        * fast/forms/input-number-commit-valid-only-expected.txt: Added.
        * fast/forms/input-number-commit-valid-only.html: Added.
        * fast/forms/script-tests/ValidityState-typeMismatch-number.js:
        * fast/forms/script-tests/input-number-commit-valid-only.js: Added.
2010-09-09  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        <input type=number> should not have an invalid number as its value
        https://bugs.webkit.org/show_bug.cgi?id=43973

        This change implements the value sanitization algorithm for
        type=number, and remove validity.typeMismatch support for
        type=number in order to improve HTML5 conformance.

        HTMLInputElement::value for type=number always has a valid number
        string or an empty string. However, the input field for it, a
        RenderTextControlSingleLine, can have a non-number string. For
        example, '-' is a non-number string, but a user needs to type
        '-'. So, the string in the input field has never been committed to
        HTMLInputElement until the string becomes a valid number string.

        This change is also a preparation of supporting localized
        numbers. A localized string in the input field would not be
        matched with HTMLInputElement::value.

        Test: fast/forms/input-number-commit-valid-only.html

        * dom/InputElement.h: Add isCommittableValue()
        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::handleBlurEvent):
         Set formControlValueMatchesRenderer false to clean an invalid value in the renderer.
        (WebCore::HTMLInputElement::isCommittableValue):
        (WebCore::HTMLInputElement::sanitizeValue):
        * html/HTMLInputElement.h:
        * html/ValidityState.cpp:
        (WebCore::ValidityState::typeMismatch): Always returns false for type=number.
        * rendering/RenderTextControlSingleLine.cpp:
        (WebCore::RenderTextControlSingleLine::subtreeHasChanged):
        * wml/WMLInputElement.h:
        (WebCore::WMLInputElement::isCommittableValue):

Canonical link: https://commits.webkit.org/57900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67164 268f45cc-cd09-0410-ab3c-d52691b4dbfc