WebCore/html/HTMLInputElement.h
@@ -281,6 +281,7 @@ private:
 
     virtual void cacheSelection(int start, int end);
 
+    virtual bool isAcceptableValue(const String&) const;
     virtual String sanitizeValue(const String&) const;
 
     virtual void documentDidBecomeActive();
